# go-graph-mcp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/go_graph_mcp/: __init__.py
src/go_graph_mcp/cli/: go_parser.py  mcp_setup.py  query_cli.py
src/go_graph_mcp/client/: __init__.py  client.py  models.py  taxonomy.py  text_augmentor.py
src/go_graph_mcp/ontology/: __init__.py  go_parser.py
src/skuzu/: __init__.py
src/skuzu/cli/: __init__.py  go_parser.py
src/skuzu/ontology/: __init__.py  go_parser.py
