[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "go_graph_mcp"
dynamic = ["version"]
description = "go_graph_mcp package"
readme = "README.md"
requires-python = ">3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Author"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "kuzu",
    "click",
    "requests",
    "pydantic>=2.0",
    "rapidfuzz",
    "ete3",
    "six",
    "numpy",
]

[project.scripts]
parse_go = "go_graph_mcp.cli.go_parser:cli"
query_go = "go_graph_mcp.cli.query_cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/username/go_graph_mcp"

[tool.hatch.version]
path = "src/go_graph_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/go_graph_mcp"]

[tool.hatch.build]
only-packages = true

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "W"]
ignore = []

[tool.ruff.isort]
known-first-party = ["go_graph_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 